2000-06-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 11792: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: -K option for
 	zparseopts to keep previous array values
	
	* 11789: Completion/Commands/_correct_word,
 	Completion/Commands/_expand_word, Completion/Commands/_next_tags:
 	setup options in bindable commands
	
2000-06-06  Oliver Kiddle  <opk@zsh.org>

	* 11772: Completion/User/_urls: improvements to 11756 suggested by
	Bart in 11763 

2000-06-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 11777: Completion/Core/_expand: make _expand ignore empty
 	expansions
	
	* 11776: Completion/Core/_path_files: fix for _path_files and
 	globcomplete, better test if word contains wildcards
	
	* 11768: Doc/Zsh/expn.yo, Src/lex.c, Src/subst.c: make (e) flag be
 	silent unless (X) is given, too
	
2000-06-05  Oliver Kiddle  <opk@zsh.org>

	* 11756: Completion/User/_urls, Completion/Linux/_rpm: accept -g
	option in _urls and use _urls in _rpm

	* 11755: test/comptest: fix wording in error messages

2000-06-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Config/version.mk: 3.1.9, already.

2000-06-05  Oliver Kiddle  <opk@zsh.org>

	* unposted: Src/params.c: AIX dependency fix

2000-06-05  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: Config/version.mk: 3.1.8 released.

	* unposted: 14array.ztst missing from Test/.distfiles.

2000-06-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 11745: Src/builtin.c, Src/Modules/parameter.c, Src/Zle/compresult.c:
 	some more memory leak fixes
	
2000-06-04  Bart Schaefer  <schaefer@zsh.org>

	* 11743: Completion/Linux/_rpm: Complete http as well as ftp URLs
	in the package_file state.

2000-06-04  Chmouel Boudjnah  <chmouel@mandrakesoft.com>

	* 11740: Completion/Linux/_rpm: --{rebuild,recompile} is always
	local files.

2000-06-04  Clint Adams  <schizo@debian.org>

	* 11739: Completion/Debian/_dpkg: complete multiple arguments
	for -i, -r, -P, -l, -L, -s, -S.  _funcalls for the
	newly-introduced states.
