@@ -1,5 +1,8 @@
 2000-06-07  Sven Wischnowsky  <wischnow@zsh.org>
 
+	* 11794: Src/Zle/compcore.c, Src/Zle/complist.c, Src/Zle/zle_tricky.c:
+ 	hopefully more consistent beeping with menu-selection
+	
 	* 11792: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c: -K option for
  	zparseopts to keep previous array values
 	
